--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
+import Hero from '../components/sections/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Hollow Knight Site">
-	<h1>Hello World</h1>
+	<Hero></Hero>
 </Layout>
