style: create hero section

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,8 +1,10 @@
 ---
 import HollowKnightLogo from '../../assets/hollow-knight-logo.png'
+import Navbar from '../elements/Navbar.astro'
 ---
 
 <header class="hero">
+    <Navbar></Navbar>
     <div class="container">
         <div class="hero__brand">
             <img src={HollowKnightLogo.src} alt="Hollow Knight Logo">
